# bundler

./: .editorconfig  .gitignore  CLAUDE.md  Program.cs  README.md  package-lock.json  package.json  ts0.csproj  ts0.json
.github/: settings.yml
.github/workflows/: ci.yml  cpp-ci.yml  cpp.yml
cpp/: CMakeLists.txt  cosmo-toolchain.cmake
cpp/src/: cli.cpp  cli.hpp  config.cpp  config.hpp  glob.cpp  glob.hpp  json.cpp  json.hpp  main.cpp  process.cpp  process.hpp  watcher.cpp  watcher.hpp
cpp/src/commands/: build.cpp  build.hpp  init.cpp  init.hpp  run.cpp  run.hpp  test.cpp  test.hpp
example/: ts0.json
example/src/: main.test.ts  main.ts
samples/basic/: ts0.json
samples/basic/src/: main.test.ts  main.ts
samples/html/: index.html  ts0.json
samples/html/assets/: example.glsl
samples/html/src/: greet.ts  main.ts  styles.css
src/: Cli.cs  Config.cs  build.ts  cli.ts  config.ts  glob.ts  init.ts  run.ts  test.ts
src/Commands/: BuildCommand.cs  InitCommand.cs  RunCommand.cs  TestCommand.cs
src/commands/: build-html.ts  build.ts  init.ts  run.ts  test.ts
src/runtime/: fetch-interceptor.js
